--- a/package.json
+++ b/package.json
@@ -4,8 +4,35 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
+    "heroku-postbuild": "NODE_ENV=production cd client && npm install && npm run build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@mux/mux-node": "^2.7.0",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
+    "config": "^3.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^2.2.33",
+    "mongoose": "^5.9.6",
+    "node-media-server": "^2.1.6",
+    "nodemon": "^2.0.2",
+    "opentok": "^2.9.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "pusher": "^3.0.0",
+    "react-hls": "0.0.8",
+    "simple-peer": "^9.6.2",
+    "socket.io": "^2.3.0"
+  }
 }
