--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,16 @@
     "flv.js": "^1.5.0",
     "lodash": "^4.17.15",
     "opentok-react": "^0.10.0",
+    "paypal-checkout": "^4.0.312",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-date-picker": "^8.0.0",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
+    "react-modal": "^3.11.2",
+    "react-moment": "^0.9.7",
     "react-player": "^1.15.3",
+    "react-progressbar": "^15.4.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
