--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@mux/mux-node": "^2.7.0",
+    "aws-sdk": "^2.652.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
@@ -20,9 +21,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^2.2.33",
     "mongoose": "^5.9.6",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.2",
+    "multer-s3": "^2.9.0",
     "node-media-server": "^2.1.6",
     "nodemon": "^2.0.2",
     "opentok": "^2.9.2",
@@ -33,6 +38,7 @@
     "pusher": "^3.0.0",
     "react-hls": "0.0.8",
     "simple-peer": "^9.6.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^7.0.3"
   }
 }
