--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-uuid": "^1.0.2",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
