--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "config": "^3.3.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,6 +38,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1",
     "pusher": "^3.0.0",
     "react-hls": "0.0.8",
     "simple-peer": "^9.6.2",
