--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,15 @@
     "opentok-react": "^0.10.0",
     "paypal-checkout": "^4.0.312",
     "react": "^16.13.1",
+    "react-awesome-popover": "^6.1.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-date-picker": "^8.0.0",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
+    "react-parallax": "^3.0.3",
     "react-player": "^1.15.3",
     "react-progressbar": "^15.4.1",
     "react-redux": "^7.2.0",
@@ -37,7 +40,9 @@
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "sendbird": "^3.0.121",
     "thunk": "0.0.1",
+    "underscore": "^1.10.2",
     "video-react": "^0.14.1",
     "video.js": "^7.7.5",
     "webpack": "^4.42.0",
