--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "paypal-rest-sdk": "^1.8.1",
     "pusher": "^3.0.0",
     "react-hls": "0.0.8",
+    "sendbird": "^3.0.121",
     "simple-peer": "^9.6.2",
     "socket.io": "^2.3.0",
+    "stream-chat": "^1.7.2",
     "uuid": "^7.0.3"
   }
 }
