wired up messaging - both group and private - working on payment system

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-date-picker": "^8.0.0",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
+    "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
@@ -41,6 +42,9 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "sendbird": "^3.0.121",
+    "socket.io-client": "^2.3.0",
+    "stream-chat": "^1.7.2",
+    "stream-chat-react": "^0.11.10",
     "thunk": "0.0.1",
     "underscore": "^1.10.2",
     "video-react": "^0.14.1",
