--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^4.4.1",
     "config": "^3.3.0",
     "flv.js": "^1.5.0",
+    "jquery": "^3.5.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "opentok-react": "^0.10.0",
     "paypal-checkout": "^4.0.312",
     "react": "^16.13.1",
