--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
+    "react-multi-carousel": "^2.5.5",
     "react-parallax": "^3.0.3",
     "react-player": "^1.15.3",
     "react-progressbar": "^15.4.1",
