--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flv.js": "^1.5.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.9.1",
     "moment": "^2.24.0",
     "opentok-react": "^0.10.0",
     "paypal-checkout": "^4.0.312",
