--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pusher": "^3.0.0",
     "react-hls": "0.0.8",
     "sendbird": "^3.0.121",
+    "sendgrid": "^5.2.3",
     "simple-peer": "^9.6.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
