--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "paypal-checkout": "^4.0.312",
     "react": "^16.13.1",
     "react-awesome-popover": "^6.1.1",
+    "react-confetti": "^5.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-date-picker": "^8.0.0",
     "react-dom": "^16.13.1",
+    "react-dom-confetti": "^0.1.3",
     "react-google-recaptcha": "^2.0.1",
     "react-images-upload": "^1.2.8",
     "react-js-pagination": "^3.0.3",
@@ -33,12 +35,14 @@
     "react-moment": "^0.9.7",
     "react-multi-carousel": "^2.5.5",
     "react-parallax": "^3.0.3",
+    "react-places-autocomplete": "^7.2.1",
     "react-player": "^1.15.3",
     "react-progressbar": "^15.4.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-sound": "^1.2.0",
     "react-stripe-checkout": "^2.6.3",
     "react-uuid": "^1.0.2",
     "reactstrap": "^8.4.1",
