--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
+    "node_0": "nodemon server.js 5000 http://localhost:5000",
+    "node_1": "nodemon server.js 5001 http://localhost:5001",
+    "node_2": "nodemon server.js 5002 http://localhost:5002",
+    "node_3": "nodemon server.js 5003 http://localhost:5003",
+    "node_4": "nodemon server.js 5004 http://localhost:5004",
+    "dev": "concurrently \"npm run node_0\" \"cd client && npm start\"",
     "heroku-postbuild": "NODE_ENV=production cd client && npm install && npm run build"
   },
   "author": "",
@@ -21,6 +25,8 @@
     "config": "^3.3.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
+    "elliptic": "^6.5.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
@@ -42,8 +48,11 @@
     "paypal-rest-sdk": "^1.8.1",
     "pusher": "^3.0.0",
     "react-hls": "0.0.8",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "sendbird": "^3.0.121",
     "sendgrid": "^5.2.3",
+    "sha256": "^0.2.0",
     "simple-peer": "^9.6.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
