--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.4.1",
     "config": "^3.3.0",
+    "dotenv": "^8.2.0",
     "flv.js": "^1.5.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
