--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
+    "getstream": "^4.5.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -38,6 +39,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
     "multer-s3": "^2.9.0",
+    "nexmo": "^2.6.0",
     "node-media-server": "^2.1.6",
     "nodemon": "^2.0.2",
     "opentok": "^2.9.2",
@@ -47,6 +49,7 @@
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "pusher": "^3.0.0",
+    "react-activity-feed": "^0.10.2",
     "react-hls": "0.0.8",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
